--- a/app/pages/home/home.module.css
+++ b/app/pages/home/home.module.css
@@ -14,6 +14,20 @@
     gap: 0.5rem;
 }
 
+.HorizontalCarousel::before {
+    left: 0;
+    background: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+}
+
+.HorizontalCarousel::after {
+    right: 0;
+    background: linear-gradient(to left, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+}
+
+.HorizontalCarousel > * {
+    flex-shrink: 0;
+}
+
 .TitleWithSort {
     display: flex;
     justify-content: space-between;
